objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Contacts__c</fullName>
        <label>Additional Contacts</label>
        <picklist>
            <picklistValues>
                <fullName>x</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approval_Stage__c</fullName>
        <label>Quote Approval Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preliminary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CE_HS_Sub_reason__c</fullName>
        <label>Sub Reason (DHS)</label>
        <picklist>
            <controllingField>Reason__c</controllingField>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service terms</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CE_PE_Sub_reason__c</fullName>
        <label>Sub Reason (DDS)</label>
        <picklist>
            <controllingField>Reason__c</controllingField>
            <picklistValues>
                <fullName>Customer application requires Liquid cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Front End</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harmonic solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overload capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC technique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System supplier/Package deals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CE_RC_Sub_reason__c</fullName>
        <label>Sub Reason (DCS)</label>
        <picklist>
            <controllingField>Reason__c</controllingField>
            <picklistValues>
                <fullName>Better Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specifications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloned_Quote_Number__c</fullName>
        <label>Cloned Quote Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigitQuoteId__c</fullName>
        <description>The quote id/number assigned by Configit</description>
        <externalId>true</externalId>
        <label>Configit Quote Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ConfigitQuoteRef__c</fullName>
        <label>Quick Reference Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigitQuoteRevDisplay__c</fullName>
        <formula>&quot;R&quot; + Text(Value(ConfigitQuoteRev__c)+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Revision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigitQuoteRev__c</fullName>
        <label>Configit Revision Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigitSyncMessage__c</fullName>
        <defaultValue>&quot;OK&quot;</defaultValue>
        <label>Configit Sync Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConfigitSyncStatus__c</fullName>
        <formula>IF(AND(ConfigitSyncMessage__c !=&apos;OK&apos;,ConfigitSyncMessage__c !=&apos;&apos;),
( IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;warning&quot;, 16, 16) + &quot; &quot; + ConfigitSyncMessage__c ) ,
(IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;ok&quot;) +&quot; OK&quot; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configit Sync Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Address__c</fullName>
        <formula>Contact.Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Specific_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>country used to determine the footer text on the PDF</description>
        <label>Country Specific Footer</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedBy_Configit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created By (Configit)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes_Created</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate_Configit__c</fullName>
        <label>Created Date (Configit)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Custom_Account_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup relationship is created to make Quotes visible in a related list on Account. This field is to be populated by configit.</description>
        <label>Account (Quote)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes_Visible_On_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Hierarchy_Name__c</fullName>
        <label>Customer Hierarchy Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Hierarchy__c</fullName>
        <label>Customer Hierarchy</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Date__c</fullName>
        <inlineHelpText>If left blank will default to +5 days</inlineHelpText>
        <label>Customer Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Sales_Org__c</fullName>
        <label>External Sales Org</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Footer_Comments__c</fullName>
        <label>Footer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incoterms__c</fullName>
        <label>Incoterms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_ModifiedBy_Configit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By (Configit)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes_LastModifiedBy</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_ModifiedDate_Configit__c</fullName>
        <label>Last Modified Date (Configit)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Me__c</fullName>
        <formula>if( $User.Username =  Last_ModifiedBy_Configit__r.Username , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified By Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lines_Approved__c</fullName>
        <formula>LineItemCount - (Lines_Cancelled__c + Lines_Countered_by_Business_Area__c + Lines_Countered_by_Pricing__c + Lines_Countered_by_Sales_Manager__c + Lines_Declined_by_BA__c + Lines_Pending_Business_Area_Approval__c + Lines_Pending_Pricing_Approval__c + Lines_Pending_Sales_Manager_Approval__c + Lines_Undefined_Approver__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lines Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lines_Cancelled__c</fullName>
        <label>Lines Cancelled</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Line_Item_Approval_Stage__c</field>
            <operation>equals</operation>
            <value>Cancelled by Account Owner</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lines_Countered_by_Business_Area__c</fullName>
        <label>Lines Countered by BU</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Line_Item_Approval_Stage__c</field>
            <operation>equals</operation>
            <value>Business Unit - Countered</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lines_Countered_by_Pricing__c</fullName>
        <label>Lines Countered by Pricing</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Line_Item_Approval_Stage__c</field>
            <operation>equals</operation>
            <value>Pricing Team - Countered</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lines_Countered_by_Sales_Manager__c</fullName>
        <label>Lines Countered by Sales Mgr</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Line_Item_Approval_Stage__c</field>
            <operation>equals</operation>
            <value>Sales Manager - Countered</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lines_Declined_by_BA__c</fullName>
        <label>Lines Declined by BU</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Line_Item_Approval_Stage__c</field>
            <operation>equals</operation>
            <value>Business Unit - Declined</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lines_Pending_Business_Area_Approval__c</fullName>
        <label>Lines Pending with BU</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Line_Item_Approval_Stage__c</field>
            <operation>equals</operation>
            <value>Business Unit - Requires Review</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lines_Pending_Pricing_Approval__c</fullName>
        <label>Lines Pending with Pricing</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Line_Item_Approval_Stage__c</field>
            <operation>equals</operation>
            <value>Pricing Team - Requires Review</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lines_Pending_Sales_Manager_Approval__c</fullName>
        <label>Lines Pending with Sales Mgr</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Line_Item_Approval_Stage__c</field>
            <operation>equals</operation>
            <value>Sales Manager - Requires Review</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lines_Undefined_Approver__c</fullName>
        <label>Lines With Undefined Approver</label>
        <summaryFilterItems>
            <field>QuoteLineItem.Line_Item_Approval_Stage__c</field>
            <operation>equals</operation>
            <value>Select Approval Routing</value>
        </summaryFilterItems>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MergeFormulaParentAccount__c</fullName>
        <formula>IF(Opportunity.Account.Parent.Name != &apos;&apos;, &apos;The parent is &apos; &amp; Opportunity.Account.Parent.Name, &apos;(No parent account)&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Formula_Account_Name__c</fullName>
        <formula>Opportunity.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Formula - Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Formula_BusOrg__c</fullName>
        <formula>TEXT(Opportunity.Account.Business_Org__c)</formula>
        <label>Merge Formula - BusOrg</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Formula_Country__c</fullName>
        <formula>Opportunity.Account.Country__r.Country_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Formula - Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Formula_Region__c</fullName>
        <formula>Opportunity.Account.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Formula_SAP_ID__c</fullName>
        <formula>Opportunity.Account.SAP_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge Formula - SAP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Now__c</fullName>
        <formula>Now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Now</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>On_Time_Quote__c</fullName>
        <formula>Approval_Date__c  &lt;=   Customer_Request_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ratio On Time v Total</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Quote_Status__c</fullName>
        <formula>IF( 
AND( Opportunity.RecordType.DeveloperName!=&apos;Shadow_Opportunity&apos;,  Text(Opportunity.Account.Business_Org__c) ==&apos;Climate and Energy&apos;, Text(Status) == &apos;Accepted&apos;,  Text(Opportunity.StageName) != &apos;Closed-Won&apos;),
( IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;warning&quot;, 16, 16) + &quot; Warning - Opportunity is not marked as won. Please update and close your opportunity&quot;) , 
(IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Requirement met&quot;) +&quot; OK&quot; ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity/Quote Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Quote_Number__c</fullName>
        <formula>IF( ISBLANK(Cloned_Quote_Number__c ),  QuoteNumber ,Cloned_Quote_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Originating_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Status__c</fullName>
        <label>SAP Price Status</label>
        <picklist>
            <picklistValues>
                <fullName>Price loaded into SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No SAP Material ID_Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creating SAP Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wrong SAP Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price_Valid_From__c</fullName>
        <label>Price Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_Valid_To__c</fullName>
        <label>Price Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Team_Group_Email__c</fullName>
        <defaultValue>&quot;globalpricing@danfoss.com&quot;</defaultValue>
        <label>Pricing Team Group Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Pricing_Updated_in_SAP__c</fullName>
        <label>SAP Price Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QLInumbers__c</fullName>
        <label>QLInumbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quote_Turn_Around_Time__c</fullName>
        <formula>Approval_Date__c - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Turn Around Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RFQ_Number__c</fullName>
        <description>RFQ Number from Configit.</description>
        <inlineHelpText>RFQ Number</inlineHelpText>
        <label>Customer Request Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <controllingField>Status</controllingField>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped by us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped by customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stopped by third party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Responsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible</label>
        <referenceTo>User</referenceTo>
        <relationshipName>My_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SAP_Price_Update_Cycle_Time__c</fullName>
        <formula>Pricing_Updated_in_SAP__c - Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Price Update Cycle Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Quote_ID__c</fullName>
        <externalId>true</externalId>
        <label>SAP Quote ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Manager_of_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Mgr of Account</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SalesManagerofQuoteAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <formula>Opportunity.Sales_Org__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Org</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Sub Account must belong to the selected account</errorMessage>
            <filterItems>
                <field>Sub_Account__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.Custom_Account_Lookup__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sub_Account__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sub_Account_formula__c</fullName>
        <formula>IF(Custom_Account_Lookup__c = Opportunity.AccountId, Opportunity.Sub_Account__r.SAP_Account_ID__c,  Sub_Account__r.SAP_Account_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surcharge_Description__c</fullName>
        <label>Surcharge Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Due_Date__c</fullName>
        <label>Task due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Sent_to_Business_Area_for_Approval__c</fullName>
        <label>Time Sent to Business Area for Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Sent_to_Pricing_Team_for_Approval__c</fullName>
        <label>Time Sent to Pricing Team for Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Sent_to_Sales_Manager_Approval__c</fullName>
        <label>Time Sent to Sales Manager Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Quote Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Quote Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manual assigned opportunity</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You cannot only select Climate and Energy opportunities 
- which are not shadow opportunities</errorMessage>
            <filterItems>
                <field>Opportunity.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>Shadow_Opportunity</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.Account.Business_Org__c</field>
                <operation>equals</operation>
                <value>Climate and Energy</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Manual Re-assigned Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>Approved_Quote</fullName>
        <active>true</active>
        <label>Approved Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Auto_Approved_Quote</fullName>
        <active>true</active>
        <label>Auto-Approved Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>CE_Quote</fullName>
        <active>true</active>
        <label>CE Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Quote</fullName>
        <active>true</active>
        <label>New Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Not_Routed_Quote</fullName>
        <active>true</active>
        <label>Not Routed Quote</label>
    </recordTypes>
    <validationRules>
        <fullName>No_Contact_from_Indirect_Account</fullName>
        <active>true</active>
        <errorConditionFormula>Text(Opportunity.Account.Business_Org__c) &lt;&gt; &quot;Climate and Energy&quot; &amp;&amp;
TEXT(Contact.Account.Channel__c) =  &quot;Indirect&quot;</errorConditionFormula>
        <errorMessage>You can&apos;t select a Contact from an Indirect Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Price_Status_Change</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
 $Profile.Name !=&apos;System Administrator&apos;, 
 $Profile.Name !=&apos;CRM_System Administrator PS&apos;, 
ISCHANGED(Price_Status__c), 
NOT(ISPICKVAL(PRIORVALUE(Price_Status__c ), &quot;&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>Price_Status__c</errorDisplayField>
        <errorMessage>SAP Price Status cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_can_only_be_changed_by_Configit</fullName>
        <active>true</active>
        <errorConditionFormula>(
$Profile.Name &lt;&gt; &quot;API Only User (CE)&quot;
)
&amp;&amp;
PRIORVALUE(TotalPrice) &lt;&gt; TotalPrice &amp;&amp;
PRIORVALUE(TotalPrice)&lt;&gt;0
&amp;&amp; ISPICKVAL(Opportunity.Account.Business_Org__c,&quot;Climate and Energy&quot;)</errorConditionFormula>
        <errorMessage>Quote Line Items can only be changed from Configit</errorMessage>
    </validationRules>
</CustomObject>